@@ -1,3 +1,5 @@
+2020/05/04
+• Bot will notify if it's having trouble reaching the Minecraft server.
 2020/04/26
 • Minecraft is now an alarm rather than an action.
 • Actions renamed to responses.
